kubernetes/cluster0/apps/monitoring/uptime-kuma/app/cilium-network-policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: uptime-kuma-allow-icmp
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: uptime-kuma
  egress:
    - icmps:
        - fields:
            - family: IPv4
              type: "8"
      toEntities:
        - world
        - cluster
